k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-https
  namespace: n8n-carpiftw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.carpiftw.cz`)
      kind: Rule
      services:
        - name: n8n-service
          port: 80
  tls:
    secretName: n8n-carpiftw-tls-prod

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-http
  namespace: n8n-carpiftw
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`n8n.carpiftw.cz`)
      kind: Rule
      services:
        - name: n8n-service
          port: 80
      middlewares:
        - name: redirect-https

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: n8n-carpiftw
spec:
  redirectScheme:
    scheme: https
    permanent: true
